objects/Reference_Request__c.object
<CustomObject>
    <description>This object is used to track the request for a reference or references.</description>
    <fields>
        <fullName>Additional_Contact_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Contact 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Reference Requests (Additional Contact 1)</relationshipLabel>
        <relationshipName>Reference_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Contact_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Contact 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Reference Requests (Additional Contact 2)</relationshipLabel>
        <relationshipName>Reference_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attributes__c</fullName>
        <label>Attributes</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Background_Info_Anticipated_Questions__c</fullName>
        <inlineHelpText>Please provide any additional detail that will facilitate making a match between the prospect and the reference, including possible questions or topics the prospect would like to discuss.</inlineHelpText>
        <label>Background Info/Anticipated Questions</label>
        <length>16384</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Date_Needed_By__c</fullName>
        <description>Date by which the reference recommendations are needed</description>
        <label>Date Needed By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Recommendations_Provided__c</fullName>
        <label>Date Recommendations Provided</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_References_Selected__c</fullName>
        <label>Date References Selected</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Submitted__c</fullName>
        <description>Date the request was entered</description>
        <label>Date Submitted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Institution_Type__c</fullName>
        <label>Institution Type</label>
        <picklist>
            <picklistValues>
                <fullName>Existing Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospective Member</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Reference Requests (Marketer)</relationshipLabel>
        <relationshipName>Reference_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_References_Needed__c</fullName>
        <label>Number of References Needed</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recommendations_Provided_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recommendations Provided By</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Reference Requests (Recommendations Provided By)</relationshipLabel>
        <relationshipName>Reference_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Reference Requests (Reference Lead)</relationshipLabel>
        <relationshipName>Reference_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Modules__c</fullName>
        <label>Reference Module(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Program__c</fullName>
        <label>Reference Program</label>
        <picklist>
            <picklistValues>
                <fullName>Crimson</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reference_Type_Needed__c</fullName>
        <label>Reference Type Needed</label>
        <picklist>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Site Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Conference</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <label>Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recommended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Selected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Released</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requesting_Contact_Title__c</fullName>
        <formula>Requesting_Contact__r.Title</formula>
        <label>Requesting Contact Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requesting_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requesting Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Reference Requests</relationshipLabel>
        <relationshipName>Reference_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requesting_Institution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requesting Institution</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reference Requests</relationshipLabel>
        <relationshipName>Reference_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesforce_URL__c</fullName>
        <description>Created as part of CR-9191.  Used in email templates for links to custom VF pages.</description>
        <formula>LEFT($Api.Partner_Server_URL_140,FIND(&apos;.com&apos;,$Api.Partner_Server_URL_140)+4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesforce URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selection_Status__c</fullName>
        <description>Based on the value in this field, the Reference Lead will know if additional recommendations are needed, and can provide them. Created for CR-20160204-9586.</description>
        <label>Selection Status</label>
        <picklist>
            <picklistValues>
                <fullName>Reference Selection Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Additional Reference Recommendations</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_Id__c</fullName>
        <formula>IF(NOT( ISBLANK( Source_Membership__c ) ),
  Source_Membership__c,
  IF( NOT (ISBLANK ( Source_Opportunity__c )),
    Source_Opportunity__c,
    IF( NOT (ISBLANK ( Source_Project__c )),
      Source_Project__c,
      &apos;&apos;
    )
  )
)</formula>
        <label>Source Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Membership__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Membership</label>
        <referenceTo>Membership__c</referenceTo>
        <relationshipLabel>Reference Requests</relationshipLabel>
        <relationshipName>Reference_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Reference Requests</relationshipLabel>
        <relationshipName>Reference_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Reference Requests</relationshipLabel>
        <relationshipName>Reference_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <formula>IF(!ISBLANK( Source_Membership__c ),
  HYPERLINK(&quot;/&quot;+ Source_Membership__c , Source_Membership__r.Name),
  IF(!ISBLANK( Source_Opportunity__c ),
    HYPERLINK(&quot;/&quot;+ Source_Opportunity__c, Source_Opportunity__r.Name),
    IF(!ISBLANK( Source_Project__c ),
      HYPERLINK(&quot;/&quot;+ Source_Project__c, Source_Project__r.Name),
      null
    )
  )
)</formula>
        <label>Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitted By</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Reference Requests (Submitted By)</relationshipLabel>
        <relationshipName>Reference_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Reference Request</label>
    <listViews>
        <fullName>CCM_References</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reference_Modules__c</field>
            <operation>equals</operation>
            <value>CCM</value>
        </filters>
        <label>CCM References</label>
    </listViews>
    <listViews>
        <fullName>Pan_Crimson_Requests_In_Progress</fullName>
        <columns>NAME</columns>
        <columns>Request_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Submitted_By__c</columns>
        <columns>Institution_Type__c</columns>
        <columns>Requesting_Institution__c</columns>
        <columns>Requesting_Contact__c</columns>
        <columns>Reference_Modules__c</columns>
        <columns>Date_Needed_By__c</columns>
        <columns>Number_of_References_Needed__c</columns>
        <columns>Background_Info_Anticipated_Questions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reference_Lead__c</field>
            <operation>equals</operation>
            <value>Tara Shimp</value>
        </filters>
        <filters>
            <field>Reference_Modules__c</field>
            <operation>notContain</operation>
            <value>CMA</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Search,Recommended,Selected</value>
        </filters>
        <label>Pan Crimson Requests - In Progress</label>
    </listViews>
    <listViews>
        <fullName>Pan_Crimson_Requests_New</fullName>
        <columns>NAME</columns>
        <columns>Request_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Date_Needed_By__c</columns>
        <columns>Submitted_By__c</columns>
        <columns>Requesting_Institution__c</columns>
        <columns>Requesting_Contact__c</columns>
        <columns>Reference_Modules__c</columns>
        <columns>Number_of_References_Needed__c</columns>
        <columns>Background_Info_Anticipated_Questions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reference_Lead__c</field>
            <operation>equals</operation>
            <value>Tara Shimp</value>
        </filters>
        <filters>
            <field>Reference_Modules__c</field>
            <operation>notContain</operation>
            <value>CMA</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>Pan Crimson Requests - New</label>
    </listViews>
    <listViews>
        <fullName>Pan_Crimson_Requests_Released</fullName>
        <columns>NAME</columns>
        <columns>Request_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Submitted_By__c</columns>
        <columns>Requesting_Institution__c</columns>
        <columns>Requesting_Contact__c</columns>
        <columns>Reference_Modules__c</columns>
        <columns>Date_Needed_By__c</columns>
        <columns>Number_of_References_Needed__c</columns>
        <columns>Background_Info_Anticipated_Questions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reference_Lead__c</field>
            <operation>equals</operation>
            <value>Tara Shimp</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Released</value>
        </filters>
        <label>Pan Crimson Requests - Released</label>
    </listViews>
    <listViews>
        <fullName>Reference_Request_New</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Submitted_By__c</columns>
        <columns>Institution_Type__c</columns>
        <columns>Requesting_Institution__c</columns>
        <columns>Requesting_Contact__c</columns>
        <columns>Reference_Modules__c</columns>
        <columns>Date_Needed_By__c</columns>
        <columns>Number_of_References_Needed__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Background_Info_Anticipated_Questions__c</columns>
        <columns>Reference_Lead__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Reference_Request_New2</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Date_Needed_By__c</columns>
        <columns>Submitted_By__c</columns>
        <columns>Requesting_Institution__c</columns>
        <columns>Requesting_Contact__c</columns>
        <columns>Reference_Modules__c</columns>
        <columns>Number_of_References_Needed__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Background_Info_Anticipated_Questions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>Reference_Modules__c</field>
            <operation>contains</operation>
            <value>CMA</value>
        </filters>
        <label>CMA Reference Request – New</label>
    </listViews>
    <listViews>
        <fullName>Reference_Requests_In_Progress</fullName>
        <columns>NAME</columns>
        <columns>Request_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Submitted_By__c</columns>
        <columns>Requesting_Institution__c</columns>
        <columns>Requesting_Contact__c</columns>
        <columns>Reference_Modules__c</columns>
        <columns>Date_Needed_By__c</columns>
        <columns>Number_of_References_Needed__c</columns>
        <columns>Background_Info_Anticipated_Questions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Search,Recommended,Selected</value>
        </filters>
        <filters>
            <field>Reference_Modules__c</field>
            <operation>contains</operation>
            <value>CMA</value>
        </filters>
        <label>CMA Reference Requests – In Progress</label>
    </listViews>
    <listViews>
        <fullName>Reference_Requests_Released1</fullName>
        <columns>NAME</columns>
        <columns>Request_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Submitted_By__c</columns>
        <columns>Requesting_Institution__c</columns>
        <columns>Requesting_Contact__c</columns>
        <columns>Reference_Modules__c</columns>
        <columns>Date_Needed_By__c</columns>
        <columns>Number_of_References_Needed__c</columns>
        <columns>Background_Info_Anticipated_Questions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Released</value>
        </filters>
        <filters>
            <field>Reference_Modules__c</field>
            <operation>contains</operation>
            <value>CMA</value>
        </filters>
        <label>CMA Reference Requests – Released</label>
    </listViews>
    <listViews>
        <fullName>Today_s_Reference_Request</fullName>
        <columns>NAME</columns>
        <columns>Submitted_By__c</columns>
        <columns>Requesting_Institution__c</columns>
        <columns>Requesting_Contact__c</columns>
        <columns>Reference_Modules__c</columns>
        <columns>Number_of_References_Needed__c</columns>
        <columns>Request_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Reference_Modules__c</field>
            <operation>equals</operation>
            <value>CMA</value>
        </filters>
        <label>Today&apos;s Reference Request</label>
    </listViews>
    <listViews>
        <fullName>iRound_Reference_Requests</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Submitted_By__c</columns>
        <columns>Institution_Type__c</columns>
        <columns>Requesting_Institution__c</columns>
        <columns>Requesting_Contact__c</columns>
        <columns>Reference_Modules__c</columns>
        <columns>Date_Needed_By__c</columns>
        <columns>Number_of_References_Needed__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Background_Info_Anticipated_Questions__c</columns>
        <columns>Reference_Lead__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reference_Modules__c</field>
            <operation>equals</operation>
            <value>iRound</value>
        </filters>
        <label>iRound Reference Requests</label>
    </listViews>
    <nameField>
        <displayFormat>RefReq-{00000000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Requests</pluralLabel>
    <recordTypes>
        <fullName>PT</fullName>
        <active>true</active>
        <label>PT</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Source_is_Required</fullName>
        <active>true</active>
        <description>Record must have either an Opportunity, Membership, or Project source</description>
        <errorConditionFormula>AND(
  ISBLANK( Source_Membership__c ),
  ISBLANK( Source_Opportunity__c ),
  ISBLANK( Source_Project__c )
)</errorConditionFormula>
        <errorMessage>A source record is required.  Please go to the related Opportunity, Membership, or Project record and click the &quot;Request a Reference&quot; button to create the Reference Request.</errorMessage>
    </validationRules>
</CustomObject>